<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="fun.veres.mobileprj.ui.destination.SetupDestinationViewModel" />

        <variable
            name="rvAdapter"
            type="fun.veres.mobileprj.ui.destination.SetupDestinationRvAdapter" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/aviasales_default"
        android:overScrollMode="never"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/mMedium">

            <LinearLayout
                android:id="@+id/llSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/bg_shape_white_rectangle_rounded"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/mSmall"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/mMedium"
                    android:layout_marginBottom="@dimen/mXSmall"
                    android:gravity="center"
                    android:text="@string/pick_up_your_route"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textSizeH3"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/mSmall"
                    android:hint="@string/from">

                    <com.google.android.material.textfield.TextInputEditText
                        focusChangedListener="@{viewmodel.fromEditTextFocusChangeListener}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewmodel.destinationFrom}"
                        tools:text="Барнаул" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/mSmall"
                    android:hint="@string/to">

                    <com.google.android.material.textfield.TextInputEditText
                        focusChangedListener="@{viewmodel.toEditTextFocusChangeListener}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewmodel.destinationTo}"
                        tools:text="Алтайский Край" />

                </com.google.android.material.textfield.TextInputLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/mSmall" >

                    <androidx.recyclerview.widget.RecyclerView
                        adapter="@{rvAdapter}"
                        datasource="@{viewmodel.destinationViewItems}"
                        viewmodel="@{viewmodel}"
                        isVisible="@{!viewmodel.isLoading() &amp;&amp; !viewmodel.isErrorReceived()}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:overScrollMode="never"
                        android:scrollbars="none"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:itemCount="5"
                        tools:listitem="@layout/item_destination"
                        tools:visibility="gone"/>

                    <ProgressBar
                        isVisible="@{viewmodel.isLoading()}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        tools:visibility="gone"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        isVisible="@{viewmodel.isErrorReceived()}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/mSmall"
                        android:text="@string/an_error_occurred"
                        android:textColor="@android:color/holo_red_dark"
                        android:gravity="center"
                        android:onClick="@{() -> viewmodel.onRetryClicked()}" />

                </FrameLayout>

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/PositiveButton"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:text="@string/next"
                    android:onClick="@{() -> viewmodel.onConfirmDestinationClicked()}"/>

            </LinearLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:translationY="35dp"
                app:layout_constraintBottom_toTopOf="@id/llSearch"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:background="@drawable/bg_shape_oval" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_logo" />

            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</layout>
